# braian_desktop

./: .cta.json  .gitignore  AGENTS.md  MEMORY_PLAN.md  NOTES.md  README.md  TESTING.md  TODO.md  components.json  package-lock.json  package.json  pnpm-lock.yaml  testcases.md  tsconfig.json  vite.config.ts
docs/: AI.md  STYLING.md
docs/app/: mcp.md  (+8 more)
patches/: @tanstack+ai+0.10.0.patch  (+1 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/braian-mcp-core/: Cargo.toml
src-tauri/crates/braian-mcp-core/src/: config.rs  http.rs  lib.rs  runtime.rs  stdio.rs
src-tauri/crates/braian-mcp-core/tests/: runtime_smoke.rs
src-tauri/crates/braian-mcpd/: Cargo.toml
src-tauri/crates/braian-mcpd/src/: lib.rs  main.rs
src-tauri/icons/: icon.icns
src-tauri/resources/webapp-template/: index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
src-tauri/resources/webapp-template/src/: App.tsx  app-routes.tsx  index.css  main.tsx
src-tauri/resources/webapp-template/src/layouts/: BraianShell.tsx
src-tauri/resources/webapp-template/src/pages/: CalculatorPage.tsx  HomePage.tsx
src-tauri/skills-default/: app-builder.md  create-skill.md
src-tauri/skills-default/app-builder/: SKILL.md
src-tauri/skills-default/create-skill/: SKILL.md
src-tauri/src/: ai_settings.rs  braian_store.rs  db.rs  lib.rs  memory_index.rs  workspace.rs  workspace_agent.rs  workspace_files.rs  workspace_git.rs  workspace_hub.rs  workspace_mcp_config.rs  workspace_mcp_http.rs  workspace_mcp_probe.rs  workspace_mcp_runtime.rs  workspace_mcp_stdio.rs  workspace_webapp_dev.rs  workspace_webapp_static.rs
(+198 files in other folders)
