[package]
name = "braian-mcp-core"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
http = "1"
rmcp = { version = "0.16", features = ["client", "transport-child-process", "transport-streamable-http-client-reqwest", "auth"] }
tokio = { version = "1", features = ["rt-multi-thread", "time", "process"] }

[dev-dependencies]
tempfile = "3"
